--- a/Dockerfile-prod
+++ b/Dockerfile-prod
@@ -20,4 +20,4 @@ RUN pip install -r requirements.txt
 ADD . /usr/src/
 
 # run server
-CMD gunicorn -b 0.0.0.0:5000 ./src
+CMD gunicorn -b 0.0.0.0:5124 /usr/src
