--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -13,7 +13,7 @@ Flask-Script==2.0.6
 idna==2.10
 importlib-metadata==3.10.1
 
-
+gunicorn==20.1.0
 jsonschema==3.2.0
 MarkupSafe==1.1.1
 pycparser==2.20
